# rtt-target

./: meson.build
RTT/: SEGGER_RTT.c  SEGGER_RTT.h
Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_SES.c
